<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_seller_home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/loginHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="Đăng ký"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView
            style="@style/loginCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="110dp"
            android:layout_marginBottom="80dp"
            android:background="@color/whiteCardColor"
            android:elevation="5dp"
            app:cardCornerRadius="29dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputUserName"
                    style="@style/parent"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/et_seller_register_username"
                        style="@style/modifiedEditText"
                        android:hint="@string/username_hint"
                        android:inputType="textPersonName|text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPassword"
                    style="@style/parent"
                    android:hint="@string/login_password_hint"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/et_seller_register_password"
                        style="@style/modifiedEditText"

                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputConfirmPassword"
                    style="@style/parent"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/et_seller_register_confirm_password"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_confirm_password_hint"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputEmail"
                    style="@style/parent"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/et_seller_register_email"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_email_hint"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputName"
                    style="@style/parent"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/et_seller_register_name"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_restaurant_hint"
                        android:inputType="textPersonName|text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputDescription"
                    style="@style/parent"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/et_seller_register_Description"
                        style="@style/modifiedEditText"
                        android:layout_weight="3"
                        android:hint="Thông tin chi tiết nhà hàng"
                        android:inputType="text"
                        android:maxLines="3"
                        android:lines="3"
                        android:minLines="3" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_seller_register_next"
                    style="@style/loginButton"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="20dp"
                    android:text="Tiếp tục" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>