<?xml version="1.0" encoding="utf-8"?>
<com.example.wastedfoodteam.utils.CustomScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_seller_home">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/loginHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="Đăng ký"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            style="@style/loginCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="110dp"
            android:layout_marginBottom="80dp"
            android:background="@color/whiteCardColor"
            android:elevation="5dp"
            app:cardCornerRadius="29dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    tools:context=".MapsActivity" />

                <com.google.android.material.textfield.TextInputLayout style="@style/parent">

                    <EditText
                        android:id="@+id/etLatitude"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_lat_hint"
                        android:inputType="none"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/parent"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/etLongitude"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_lng_hint"
                        android:inputType="none"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/parent"
                    android:id="@+id/textInputAddress"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/etAddress"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_address_hint"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnNext"
                    style="@style/loginButton"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="20dp"
                    android:text="Hoàn tất đăng ký" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.example.wastedfoodteam.utils.CustomScrollView>