<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="15dp"
    android:paddingTop="15dp"
    android:background="@drawable/gradient_seller_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            style="@style/loginCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="29dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="10dp"
                android:background="#909090"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFDFD"
                    android:padding="15dp"
                    android:text="Thêm sản phẩm"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFDFD"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivProduct"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/round_corner_background"
                        android:contentDescription="@string/product"
                        android:src="@drawable/ic_camera" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#FFFDFD"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/product_name" />

                        <TextView
                            android:id="@+id/tvCountProductName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:text="0/100" />
                    </FrameLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputProductName"
                        style="@style/parent">

                        <EditText
                            android:id="@+id/etProductName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Nhập tên sản phẩm"
                            android:maxLength="100"
                            android:inputType="textPersonName"
                            android:padding="5dp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#FFFDFD"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Mô tả sản phẩm" />

                        <TextView
                            android:id="@+id/TvCountProductDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:text="0/300" />
                    </FrameLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputProductDescription"
                        style="@style/parent">
                    <EditText
                        android:id="@+id/etDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Nhập tên mô tả sản phẩm"
                        android:maxLength="300"
                        android:inputType="textPersonName"
                        android:padding="5dp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#FFFDFD"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/product_ori_price" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputOriginalPrice"
                        style="@style/parent">
                    <EditText
                        android:id="@+id/etOriginalPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:hint="Thiết lập giá"
                        android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFDFD"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/product_sell_price" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputSellPrice"
                        style="@style/parent">
                    <EditText
                        android:id="@+id/etSellPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:hint="Thiết lập giá"
                        android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="#FFFDFD"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/product_quantity" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputQuantity"
                        style="@style/parent">
                    <EditText
                        android:id="@+id/etQuantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:hint="Nhập số lượng"
                        android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#FFFDFD"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="Thời gian bán" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFDFD"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:gravity="center_vertical"
                            android:text="@string/product_start_time" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputOpenTime"
                            style="@style/parent">
                        <TextView
                            android:id="@+id/etOpenTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/editTextBackground"
                            android:gravity="end"
                            android:hint="00:00"
                            android:text=""
                            android:textAppearance="?android:attr/textAppearanceMediumInverse"
                            android:textColor="?attr/editTextColor" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFDFD"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:gravity="center_vertical"
                            android:text="@string/product_end_time" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputCloseTime"
                            style="@style/parent">
                        <TextView
                            android:id="@+id/etCloseTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/editTextBackground"
                            android:gravity="end"
                            android:hint="23:59"
                            android:text=""
                            android:textAppearance="?android:attr/textAppearanceMediumInverse"
                            android:textColor="?attr/editTextColor" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/btnAddProductAdd"
                        style="@style/loginButton"
                        android:layout_width="200dp"
                        android:layout_height="45dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="Thêm sản phẩm"
                        android:textAllCaps="false"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
